<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    >


    <TextView
        android:id="@+id/state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:padding="4dp"
        android:text="@string/state_ut"
        android:textAllCaps="true"
        android:textSize="13sp"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/confirmed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:padding="2dp"
        android:text="@string/cnfmd"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/dark_red"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/active"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="4dp"
        android:text="@string/actv"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/recovered"
        android:textAlignment="center"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/rcvrd"
        android:textAllCaps="true"
        android:textColor="@color/dark_green"
        android:textStyle="bold"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/death"
        android:textAlignment="center"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/dcsd"
        android:textAllCaps="true"
        android:textColor="@color/dark_yellow"
        android:textStyle="bold"
        android:gravity="center_horizontal" />


</LinearLayout>